<resources>
    <string name="app_name">FitBet</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Flo's Strings -->
    <string name="uebTipp">Dein Tipp</string>
    <string name="txtPoints">Points</string>
    <string name="txtResTippR">Richtig getippt</string>
    <string name="txtResTippF">Falsch getippt</string>
    <string name="titelStat">Statistik von</string>

    <string name="btnGruppen">Gruppen</string>
    <string name="btnTippen">Tippen</string>
    <string name="btnStatistik">Statistik</string>
    <string name="btnSport">Sport</string>
    <string name="title_activity_tippen__spielauswahl">Spiele</string>
    <string name="tab_text_1">Datum</string>
    <string name="tab_text_2">Gruppe</string>
    <string name="tab_text_3">Land</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Strings related to login -->
    <string name="unsername">Username</string>
    <string name="password">Password</string>
    <string name="password_repeat">Repeat Password</string>
    <string name="register">Register</string>
    <string name="login_page">Login-Page</string>
    <string name="btnGrErstellen">Gruppe erstellen</string>
    <string name="btnGrBeitreten">Gruppe beitreten</string>

    <string name="titelActGr">Gruppen</string>
    <string name="titelActNewGr">Gruppe erstellen</string>

    <string name="inputNewGroupName">Name</string>
    <string name="inputNewGoupPassword">Passwort</string>

    <string name="sign_out">Logout</string>

    <!-- Strings related to sport -->
    <string name="multiplikatorScore">1,3x</string>
    <string name="multiplikatorText">Multiplikator</string>
    <string name="sportPic">Running</string>
    <string name="upwardSlope">UpwardSlope</string>
    <string name="upwardSlopeAmmount">"0</string>
    <string name="distance">Distance</string>
    <string name="distanceAmmount">"0</string>
    <string name="titelActJoinGr">Gruppe beitreten</string>
    <string name="tippen">tippen</string>

    <!-- Strings related to tippen -->
    <string name="successfulTipp">Tipp erfolgreich hinzugefügt</string>
    <string name="gameNotReady">Es kann nicht auf ein Spiel getippt werden, wenn die Teams noch nicht feststehen</string>
    <string name="fillBothTippFields">Es müssen beide Eingabefelder ausgefüllt sein, damit ein Tipp hinzugefügt werden kann</string>
    <string name="updatedTipp">Der vorherige Tipp wurde überschrieben</string>
</resources>
