<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/titelActJoinGr"
        />

    <EditText
        android:id="@+id/groupnameJoin"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="10dp"
        android:hint="@string/inputNewGroupName" />
    <EditText
        android:id="@+id/passwordJoin"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="10dp"
        android:hint="@string/inputNewGoupPassword"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnJoinGr"
        android:text="@string/btnGrBeitreten"
        android:background="@color/colorAccent"
        android:textColor="@color/backStat"
        android:layout_margin="10dp"/>
</LinearLayout>