<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/spacer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".Sport">



    <TextView
        android:id="@+id/btnSport"
        android:layout_width="178dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:drawableTop="@drawable/pic_sport"
        android:gravity="center"
        android:text="@string/sportPic"/>

    <ProgressBar
        android:id="@+id/distanceProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:background="@drawable/circle_shape"
        android:indeterminate="false"
        android:max="100"
        android:progress="75"
        android:progressDrawable="@drawable/circular_progress_bar"
        android:scaleX="-1"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
    />

    <TextView
        android:id="@+id/multiplicatorScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/distanceProgressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-110dp"
        android:text="@string/multiplikatorScore"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/multiplikatorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/multiplicatorScore"
        android:layout_centerHorizontal="true"
        android:text="@string/multiplikatorText" />

    <RelativeLayout
        android:id="@+id/bottomText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomText2"
        android:layout_alignParentStart="true"
        android:visibility="visible">

        <TextView
            android:id="@+id/upwardSlope"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="40dp"
            android:text="@string/upwardSlope"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/upwardSlopeAmmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="40dp"
            android:text="@string/upwardSlopeAmmount"
            android:textSize="24sp"
        />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottomText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="108dp">

        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="40dp"
            android:text="@string/distance"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/distanceAmmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="40dp"
            android:text="@string/distanceAmmount"
            android:textSize="24sp" />


    </RelativeLayout>

    <Button
        android:id="@+id/btnStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="31dp"
        android:layout_toEndOf="@+id/multiplicatorScore"
        android:text="stop"
    />

    <Button
        android:id="@+id/btnGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnStop"
        android:layout_toStartOf="@+id/multiplicatorScore"
        android:text="go"
    />




</RelativeLayout>